--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,6 +6,15 @@ add_library(
   server.cpp
   communication/identification.hpp
   communication/identification.cpp
+  communication/error.hpp
+  communication/error.cpp
+  communication/generic_response.hpp
+  communication/generic_response.cpp
+  communication/messages.hpp
+  game/player.hpp
+  game/player.cpp
+  game/room.hpp
+  game/room.cpp
   )
 
 target_include_directories(server INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
