--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,6 @@
     "valarray": "cpp",
     "variant": "cpp",
     "*.ipp": "cpp"
-  }
+  },
+  "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
 }
